tools/deb/test/envoy_local.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:15001",
      "name": "virtual",
      "filters": [],
      "bind_to_port": true,
      "use_original_dst": true
    },
    {
      "address": "tcp://0.0.0.0:9998",
      "name": "in_9998",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "http",
            "generate_request_id": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "inbound|9998",
                  "domains": [
                    "*"
                  ],
                  "routes": [
                    {
                      "prefix": "/",
                      "cluster": "in.9999",
                      "opaque_config": {
                        "mixer_control": "on",
                        "mixer_forward": "off"
                      }
                    },
                    {
                      "prefix": "/mixeroff",
                      "cluster": "in.9999",
                      "opaque_config": {
                        "mixer_control": "off",
                        "mixer_forward": "off"
                      }
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "mixer",
                "config": {
                  "mixer_attributes": {
                    "target.ip": "10.128.0.5",
                    "target.service": "my-service.default.svc.cluster.local",
                    "target.uid": "kubernetes://hello-3564253481-dvc07.default"
                  },
                  "forward_attributes": {
                    "source.ip": "10.128.0.5",
                    "source.uid": "kubernetes://hello-3564253481-dvc07.default"
                  },
                  "quota_name": "RequestCount"
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ],
            "access_log": [
              {
                "path": "/dev/stdout"
              }
            ]
          }
        }
      ],
      "bind_to_port": true
    },
    {
       "address": "tcp://0.0.0.0:15002",
       "use_original_dst": true,
       "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "http_proxy",

            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
              ],

            "route_config": {
              "virtual_hosts": [
                {
                  "name": "local",
                  "domains": ["localhost"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "in.9999",
                      "opaque_config": {
                        "mixer_control": "on",
                        "mixer_forward": "off"
                      }
                    }
                  ]
                }]},
            "http1_settings": {
              "allow_absolute_url": true
            },
            "access_log": [
              {
                "path": "/dev/null"
              }
            ]
          }
        }
      ],
      "bind_to_port": true
   },
    {
      "address": "tcp://0.0.0.0:15003",
      "use_original_dst": true,
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "http_proxy",

            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ],
            "rds": {
              "cluster": "rds",
              "route_config_name": "80",
              "refresh_delay_ms": 1000
            },
            "http1_settings": {
              "allow_absolute_url": true
            },
            "access_log": [
              {
                "path": "/dev/null"
              }
            ]
          }
        }
      ],
      "bind_to_port": true
    },
    {
      "address": "tcp://0.0.0.0:8000",
      "name": "http_0.0.0.0_8000",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "http",
            "generate_request_id": true,
            "tracing": {
              "operation_name": "ingress"
            },
            "rds": {
              "cluster": "rds",
              "route_config_name": "8000",
              "refresh_delay_ms": 1000
            },
            "filters": [
              {
                "type": "decoder",
                "name": "mixer",
                "config": {
                  "mixer_attributes": {
                    "target.ip": "10.128.0.5",
                    "target.service": "my-service.default.svc.cluster.local",
                    "target.uid": "kubernetes://hello-3564253481-dvc07.default"
                  },
                  "forward_attributes": {
                    "source.ip": "10.128.0.5",
                    "source.uid": "kubernetes://hello-3564253481-dvc07.default"
                  },
                  "quota_name": "RequestCount"
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ],
            "access_log": [
              {
                "path": "/dev/stdout"
              }
            ]
          }
        }
      ],
      "bind_to_port": false
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:15000"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "rds",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8080"
          }
        ]
      },
      {
        "name": "lds",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8080"
          }
        ]
      },
      {
        "name": "mixer_server",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:9091"
          }
        ],
        "features": "http2",
        "circuit_breakers": {
          "default": {
            "max_pending_requests": 10000,
            "max_requests": 10000
          }
        }
      },
      {
        "name": "out.local",
        "service_name": "my-local-service.default.svc.cluster.local|http",
        "connect_timeout_ms": 1000,
        "type": "sds",
        "lb_type": "round_robin"
      },
      {
        "name": "in.9999",
        "connect_timeout_ms": 1000,
        "type": "static",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:9999"
          }
        ]
      }
    ],
    "sds": {
      "cluster": {
        "name": "sds",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8080"
          }
        ]
      },
      "refresh_delay_ms": 10000
    },
    "cds": {
      "cluster": {
        "name": "cds",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8080"
          }
        ]
      },
      "refresh_delay_ms": 10000
    }
  }
}
